# Smart-Spam-Detector

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SUPPORT.md  api.py  app.py  classify.py  memory.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gitleaks.yml
.streamlit/: config.toml
Notebook Experiments/: Spam Email Detection.ipynb
docs/: api-map.md  architecture.md  database-map.md  dependency-graph.md  routes.md
history/: classifications.db
outputs/2026-05-26_19-15-21/models/: DecisionTree_model.pkl  KNN_model.pkl  LogisticRegression_model.pkl  SVM_model.pkl  vectorizer.pkl
outputs/2026-05-26_19-15-21/observations/: best_model_info.csv  best_parameters.csv  cross_validation_summary.csv  model_comparison_summary.csv  model_metadata.json
outputs/2026-05-26_19-30-09/models/: vectorizer.pkl
outputs/2026-05-26_19-30-09/observations/: best_model_info.csv  model_metadata.json
outputs/2026-05-26_19-38-55/models/: SVM_model.pkl  vectorizer.pkl
outputs/2026-05-26_19-38-55/observations/: model_metadata.json
outputs/2026-05-27_11-51-17/models/: LogisticRegression_model.pkl  RandomForest_model.pkl  vectorizer.pkl
outputs/2026-05-27_11-51-17/observations/: model_comparison_summary.csv  model_metadata.json
outputs/2026-05-27_12-51-50/models/: DecisionTree_model.pkl  KNN_model.pkl  vectorizer.pkl
outputs/2026-05-27_12-51-50/observations/: best_parameters.csv  cross_validation_summary.csv  model_metadata.json
outputs/2026-06-01_18-54-30/models/: DecisionTree_model.pkl  KNN_model.pkl  LogisticRegression_model.pkl  SVM_model.pkl  vectorizer.pkl
outputs/2026-06-01_18-54-30/observations/: best_model_info.csv  best_parameters.csv  cross_validation_summary.csv  model_comparison_summary.csv  model_metadata.json
src/: __init__.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  model_training.py
src/config/: __init__.py  config.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: email_utils.py  history_manager.py  logger.py  model_comparison.py  report_generator.py  state.py  url_analyzer.py  utils.py
tests/: test_api.py  test_config.py  test_email_utils.py  test_history_manager.py  test_prediction_pipeline.py  test_report_generator.py  test_url_analyzer.py  test_utils.py
